# pharmassist

./: .env  .env.example  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_crew_kickoff.py  test_ops_crew.py
agents/: creator_agent.py  drug_profile_agent.py  ops_team_agent.py  outreach_agent.py  sidekick_agent.py  trial_agent.py
data/: doctors.csv  drug_profile.json  trials.csv
pharmassist_agents/: drug_profile_agent.py  ops_team_agent.py  ops_team_tools.py  outreach_agent.py  regulatory_agent.py  trial_agent.py
pharmassist_agents/ops_team_config/: agents.yaml  tasks.yaml
