[project]
name = "pharmassist"
version = "0.1.0"
description = "Agentic Drug Launch Assistant demo built from Ed Donner's course"
requires-python = ">=3.10"

dependencies = [
  "gradio==4.44.1",
  "crewai",
  "langgraph",
  "autogen-agentchat",
  "pydantic",
  "python-dotenv",
  "pandas",
  "pypdf>=6.1.0",
  "crewai-tools>=0.76.0",
  "pyyaml>=6.0.3",
  "langchain-openai>=1.0.1",
]

[tool.pytest.ini_options]
addopts = "-q"
